--- a/RPS/index.html
+++ b/RPS/index.html
@@ -6,10 +6,19 @@
     <title>Rock-paper-scissors</title>
 </head>
 <body>
-    <div id="game-controller">
+    <div id="game-container">
         <h1> Rock-Paper-Scissors Game</h1>
-
-    
+        <div class="choices">
+                <button class="choice" data-choice="rock">✊</button>
+                <button class="choice" data-choice="paper">✋</button>
+                <button class="choice" data-choice="scissors">🤘</button>
+        </div>
+        <div class="results">
+                <p><strong>Your Choice: </strong> <span id="player-choice">-</span></p>
+                <p><strong>Computer's Choice:</strong> <span id="computer-choice">-</span></p>
+                <p><strong>Result: </strong> <span id="result">-</span></p>
+        </div>
+        <button id="restart" class="restart">Restart Game</button>
     </div>
 </body>
 </html>
