--- a/RPS/index.html
+++ b/RPS/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock-paper-scissors</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rock-Paper-Scissors</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="game-container">
-        <h1> Rock-Paper-Scissors Game</h1>
-        <div class="choices">
-                <button class="choice" data-choice="rock">✊</button>
-                <button class="choice" data-choice="paper">✋</button>
-                <button class="choice" data-choice="scissors">🤘</button>
-        </div>
-        <div class="results">
-                <p><strong>Your Choice: </strong> <span id="player-choice">-</span></p>
-                <p><strong>Computer's Choice:</strong> <span id="computer-choice">-</span></p>
-                <p><strong>Result: </strong> <span id="result">-</span></p>
-        </div>
-        <button id="restart" class="restart">Restart Game</button>
+  <div class="game-container">
+    <h1>Rock-Paper-Scissors</h1>
+    <div class="choices">
+      <button class="choice" data-choice="rock">✊ Rock</button>
+      <button class="choice" data-choice="paper">✋ Paper</button>
+      <button class="choice" data-choice="scissors">✌️ Scissors</button>
     </div>
+    <div class="results">
+      <p class="player-choice">Your Choice: <span id="player-choice">-</span></p>
+      <p class="computer-choice">Computer's Choice: <span id="computer-choice">-</span></p>
+      <p class="result-message">Result: <span id="result">-</span></p>
+    </div>
+    <button id="restart" class="restart">Restart Game</button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
